# more-convert

./: Cargo.toml  README.md
more-convert/: Cargo.toml
more-convert-derive/: Cargo.toml
more-convert-derive-internal/: Cargo.toml
more-convert-derive-internal/src/: dev_utils.rs  enum_array.rs  enum_repr.rs  lib.rs  maybe_owned.rs
more-convert-derive-internal/src/convert/: args.rs  field.rs  field_arg.rs  field_args.rs  from.rs  generate.rs  into.rs  mod.rs  struct_arg.rs  target.rs
more-convert-derive-internal/src/enum_name/: args.rs  enum_arg.rs  mod.rs  variant_arg.rs
more-convert-derive-internal/src/enum_repr/: args.rs  enum_arg.rs  internal.rs  mod.rs  variant_arg.rs
more-convert-derive-internal/src/variant_name/: args.rs  enum_arg.rs  mod.rs  variant_arg.rs
more-convert-derive/src/: lib.rs
more-convert/examples/: enum_repr.rs
more-convert/src/: enum_name.rs  enum_repr.rs  lib.rs
more-convert/src/utils/: mod.rs  vec_into.rs
more-convert/tests/: convert.rs  enum_repr.rs
more-convert/tests/enum_array/: normal.rs
more-convert/tests/enum_name/: all.rs  mod.rs  nest.rs  normal.rs  prefix_suffix.rs  rename_all.rs  without_trait.rs
more-convert/tests/enum_repr/: default_support.rs  mod.rs  normal.rs  serde_support.rs
more-convert/tests/from/: ignore.rs  map.rs  mod.rs  multi.rs  normal.rs  rename.rs
more-convert/tests/from_into/: generate.rs  ignore.rs  map.rs  multi.rs  normal.rs  rename.rs
more-convert/tests/into/: generate.rs  ignore.rs  map.rs  mod.rs  multi.rs  normal.rs  rename.rs
more-convert/tests/utils/: mod.rs  vec_into.rs
more-convert/tests/variant_name/: all.rs  mod.rs  nest.rs  normal.rs  prefix_suffix.rs  rename_all.rs  without_trait.rs
