[workspace]
resolver = "2"
members = [
    "more-convert",
    "more-convert-derive",
    "more-convert-derive-internal",
]

[patch.crates-io]
more-convert = { path = "more-convert" }

[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.80"
description = "This crate adds macros for various conversions."
authors = ["Moriyoshi Kasuga <moriyoshi.kasuga1218@gmail.com>"]
repository = "https://github.com/moriyoshi-kasuga/more-convert"
license = "MIT"
readme = "README.md"
categories = ["development-tools"]
keywords = ["macros", "utilties", "convert"]

[workspace.dependencies]
cfg-if = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "2.0"

[workspace.lints.rust]
nonstandard_style = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
