[workspace]
resolver = "2"
members = [
  "more-convert",
  "more-convert-derive",
  "more-convert-derive-internal",
]

[patch.crates-io]
more-convert = { path = "more-convert" }

[workspace.package]
version = "0.14.0"
edition = "2021"
rust-version = "1.70"
description = "This crate adds macros for various conversions."
authors = ["Moriyoshi Kasuga <moriyoshi.kasuga1218@gmail.com>"]
repository = "https://github.com/moriyoshi-kasuga/more-convert"
license = "MIT"
readme = "README.md"
categories = ["development-tools"]
keywords = ["macros", "utilties", "convert"]

[workspace.dependencies]
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "2.0"
