[workspace]
resolver = "2"
members = [
  "more-convert",
  "more-convert-derive",
  "more-convert-derive-internal",
]

[workspace.package]
version = "0.16.0"
edition = "2021"
rust-version = "1.70"
description = "This crate adds macros for various conversions."
authors = ["Moriyoshi Kasuga <moriyoshi.kasuga1218@gmail.com>"]
repository = "https://github.com/moriyoshi-kasuga/more-convert"
license = "MIT"
readme = "README.md"
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["macros", "utilities", "convert"]

[workspace.dependencies]
more-convert-derive = { version = "0.16.0", path = "more-convert-derive" }
more-convert-derive-internal = { version = "0.16.0", path = "more-convert-derive-internal" }

syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "2.0"
convert_case = "0.10"
