[package]
name = "more-convert-derive-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
ident_case = "1.0"

[lints]
workspace = true
