[package]
name = "more-convert-derive-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
convert_case = "0.7.1"

[lints]
workspace = true
