[package]
name = "more-convert-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
more-convert-derive-internal = { version = "0", path = "../more-convert-derive-internal" }

syn.workspace = true

[dev-dependencies]
more-convert = { version = "0", path = "../more-convert" }

[lints]
workspace = true
