[package]
name = "more-convert-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
more-convert-derive-internal.workspace = true

syn.workspace = true

[dev-dependencies]
thiserror.workspace = true
serde = "1.0"
serde_json = "1.0"
