[package]
name = "more-convert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[lib]

[features]
default = []
utils = []

[dependencies]
more-convert-derive.workspace = true

thiserror.workspace = true

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
